--- a/readme.adoc
+++ b/readme.adoc
@@ -10,12 +10,12 @@ https://w.wiki/9VuT[`raku`], and other forgettable.
 
 **i code for https://w.wiki/S5C[`linux`]**. in the same ages,
 my want to hack a wi-fi coincided with father's new business: programming for children 
-on thinkpads with lubuntu. i'd take one and experimented with https://w.wiki/9VuS[`debian`], 
+on thinkpads with lubuntu. had take one and experimented with https://w.wiki/9VuS[`debian`], 
 https://w.wiki/5kfD[`opensuse`], https://w.wiki/9VuV[`arch`], https://w.wiki/7caP[`fedora`], 
 and other forgettable.
 
 **i code with https://w.wiki/3oas[`vscode`]** as it universal and easier to setup for 
-small projects in opposite to https://w.wiki/PoB[`vim`]. https://w.wiki/9VuY[`emacs`] goes against unix.
+small projects in opposite to https://w.wiki/PoB[`vim`].
 
 | **minuscule**: uppercase from the origin was an emphasis tool and doesn't 
 play any role in grammar. dot stands for sentence ending. so i dont
