--- a/readme.adoc
+++ b/readme.adoc
@@ -1,20 +1,20 @@
 [cols="<2,<1"]
 |===
-| stack | personal projects principles
+| i code… (stack) | personal projects principles
 
-| **i code in https://w.wiki/9VuF[`go`]**. when i was 10 i'd been programming in
+| **in https://w.wiki/9VuF[`go`]**. when i was 10 i'd been programming in
 https://w.wiki/35Gx[`c++`] and got used to static typing, so i didn't like
 https://w.wiki/PoF[`python`] and https://w.wiki/5WMt[`typescript`] with their cosmetic
 types. have tried https://w.wiki/8yNr[`haskell`], https://w.wiki/9VuP[`ruby`],
 https://w.wiki/9VuT[`raku`], and other forgettable.
 
-**i code for https://w.wiki/S5C[`linux`]**. in the same ages,
+**for https://w.wiki/S5C[`linux`]**. in the same ages,
 my want to hack a wi-fi coincided with father's new business: programming for children 
 on thinkpads with lubuntu. had take one and experimented with https://w.wiki/9VuS[`debian`], 
 https://w.wiki/5kfD[`opensuse`], https://w.wiki/9VuV[`arch`], https://w.wiki/7caP[`fedora`], 
 and other forgettable.
 
-**i code with https://w.wiki/3oas[`vscode`]** as it universal and easier to setup for 
+**with https://w.wiki/3oas[`vscode`]** as it universal and easier to setup for 
 small projects in opposite to https://w.wiki/PoB[`vim`].
 
 | **minuscule**: uppercase from the origin was an emphasis tool and doesn't 
