--- a/readme.adoc
+++ b/readme.adoc
@@ -14,8 +14,7 @@ on thinkpads with lubuntu. had take one and experimented with https://w.wiki/9Vu
 https://w.wiki/5kfD[`opensuse`], https://w.wiki/9VuV[`arch`], https://w.wiki/7caP[`fedora`], 
 and other forgettable.
 
-**with https://w.wiki/3oas[`vscode`]** as it universal and easier to setup for 
-small projects in opposite to https://w.wiki/PoB[`vim`].
+**with https://w.wiki/3oas[`vscode`]** as it more universal and easier than https://w.wiki/PoB[`vim`].
 
 | **minuscule**: uppercase from the origin was an emphasis tool and doesn't 
 play any role in grammar. dot stands for sentence ending. so i dont
