--- a/readme.adoc
+++ b/readme.adoc
@@ -1,29 +1,31 @@
-[cols="<2,<1"]
+[cols="<1,<1"]
 |===
 | i code… (stack) | personal projects principles
 
 | **in https://w.wiki/9VuF[`go`]**. when i was 10 i'd been programming in
 https://w.wiki/35Gx[`c++`] and got used to static typing, so i didn't like
-https://w.wiki/PoF[`python`] and https://w.wiki/5WMt[`typescript`] with their cosmetic
-types. have tried https://w.wiki/8yNr[`haskell`], https://w.wiki/9VuP[`ruby`],
-https://w.wiki/9VuT[`raku`], and other forgettable.
+https://w.wiki/PoF[`python`] and https://w.wiki/5WMt[`typescript`] with their
+cosmetic types. have tried https://w.wiki/8yNr[`haskell`],
+https://w.wiki/9VuP[`ruby`], https://w.wiki/9VuT[`raku`], and other forgettable.
 
-**for https://w.wiki/S5C[`linux`]**. in the same ages,
-my want to hack a wi-fi coincided with father's new business: programming for teens 
-on thinkpads with https://w.wiki/9VvY[`lubuntu`]. had taken one and tried https://w.wiki/9VuS[`debian`], 
-https://w.wiki/5kfD[`opensuse`], https://w.wiki/9VuV[`arch`], https://w.wiki/7caP[`fedora`], 
-and other.
+**for https://w.wiki/S5C[`linux`]**. in the same ages, my want to hack a wi-fi
+coincided with father's new business: programming for teens on thinkpads with
+https://w.wiki/9VvY[`lubuntu`]. had taken one and tried
+https://w.wiki/9VuS[`debian`], https://w.wiki/5kfD[`opensuse`],
+https://w.wiki/9VuV[`arch`], https://w.wiki/7caP[`fedora`], and other.
 
-**with https://w.wiki/3oas[`vscode`]** as it more universal and easier than https://w.wiki/PoB[`vim`].
+**with https://w.wiki/3oas[`vscode`]** as it more universal and easier than
+https://w.wiki/PoB[`vim`].
 
-| **minuscule**: uppercase from the origin was an emphasis tool and doesn't 
-play any role in grammar. dot stands for sentence ending. so i dont
-press shift when write comments and logs. an emblem for it is 🔡, as 
-an opposite for 🔠.
+| **minuscule**: uppercase from the origin was an emphasis tool and doesn't play
+any role in grammar. dot stands for sentence ending. so i dont press shift when
+write comments and logs. an emblem for it is 🔡, as an opposite for 🔠.
 
-**disabbreviation**: to make consistent file structure, where are 
-"`internal`" and "`pkg`" or "`cmd`" in same place, i disabbreviate 
-them to "`packages`" and "`commands`". nowadays there is no need
-for short names with auto-completion and in-shell abbreviations.
+**disabbreviation**: to make consistent file structure, where are "`internal`"
+and "`pkg`" or "`cmd`" in same place, i disabbreviate them to "`packages`" and
+"`commands`". nowadays there is no need for short names with auto-completion and
+in-shell abbreviations.
 
 |===
+
+*read further*: link:ru/autobio.adoc[автобиография] 
