improve attributes and hyperlink all the things in autobio

--- a/docs/ru/autobio.adoc
+++ b/docs/ru/autobio.adoc
@@ -1,31 +1,46 @@
+// uri-s cutting: "vk.com/id" is the static profile address prefix in vkontakte;
+// the social media "qrwp.org" is the multilingual redirect to wikipedia
+// (check the page's existance on russian first).
+
+:h: https://
+:v: {h}vk.com/id
+:w: {h}ru.qrwp.org/
+
+
 == родился 15 января 2007 года
 
-18 и 19 летние байко ирина и зажигин алексей в мурманске 15 просинца ‘07 года,
-на две недели позже, нарекли меня богданом. она занялась писательством, а он
-предпринимательством. спустя 3 года они развелись сохраняя связь, жил в основном
-у мамы. записали в «а» класс 36-й школы; и ‘15 года мать вновь обвенчалась:
-горенюк александр стал мне отчимом, и я обрёл молочного брата — артёма.
+18 и 19 летние {v}48604722[байко ирина] и {v}75916[зажигин алексей] в мурмане
+07-01-15, {w}переношенная_беременность[на две недели позже], нарекли меня
+богданом. она занялась писательством, а он предпринимательством. спустя 3 года
+они развелись сохраняя связь, жил в основном у мамы. записали в «а» класс 36-й
+школы; и ‘15 года мать вновь обвенчалась: {v}69725108[горенюк александр] стал
+мне отчимом, и я обрёл молочного брата — артёма.
 
 
 == программист, предприниматель и писатель
 
 ютьюб срекомендовал ролики о хакерстве: чтобы взломать вай-фай понадобился
-кали-линукс, который не мог поставить на единственный компьютер. к счастью, отец
-франчизируя «алгоритмику» закупил финк-пады на лубунте, и позволил один забрать.
-сбрасывая пароль рута испробовал опен-сьюз, дебиан, манджаро, федору и арч;
-параллельно писал в виме на голанге, питоне, тайпксрипте и других.
+{w}kali_linux[`kali` `linux`], который не мог поставить на единственный
+компьютер. к счастью, отец франчизируя «алгоритмику» закупил
+{w}thinkpad[`thinkpad`-ы `t430`] на {w}lubuntu[`lubuntu`], и позволил один
+забрать. сбрасывая пароль рута испробовал {w}opensuse[`opensuse`],
+{w}debian[`debian`], {w}manjaro[`manjaro`], {w}fedora[`fedora`] и
+{w}arch_linux[`arch`]; параллельно писал в виме на {w}go[`go`],
+{w}python[`python`], {w}typescript[`typescript`] и других.
 
-как освоил линукс, нарисовал в инкскейпе логотип для организации международной
-конституции; руководствуясь у мамы книге «пиши и сокращай» написал агитку:
-читателю понравилось; и я подружился с [инкогнито], который научил системному
-администрированию и предоставил сервера для мини-государства, юридической
-энциклопедии, художественного издательства, веб-студии, биоинженерной компании,
-ксго команды и другого; но без финансирования всё было заморожено.
+как освоил `linux`, нарисовал в {w}inkscape[`inkscape`] логотип для организации
+международной конституции; руководствуясь у мамы книге
+{h}alpinabook.ru/catalog/book-pishi-sokrashchay-2025/[«пиши и сокращай»] написал
+агитку: читателю понравилось; и я подружился с [инкогнито], который научил
+системному администрированию и предоставил сервера для мини-государства,
+юридической энциклопедии, художественного издательства, веб-студии,
+биоинженерной компании, ксго команды и другого; но без финансирования всё было
+заморожено.
 
-меж тем изучил эсператно, и заинтересовался ложбаном: нарисовал логотип их
-дискорд сервера, форматировал содержание «эталонной грамматики» и рбнф. для себя
-решил вести лог в телеграмме, писать минускулом и транслитерировать
-заимствования.
+меж тем изучил {w}эсперанто[эсператно], и заинтересовался {w}ложбан[ложбаном]:
+нарисовал логотип их дискорд сервера, форматировал содержание «эталонной
+грамматики» и рбнф. для себя решил вести лог в телеграмме, писать минускулом и
+транслитерировать заимствования.
 
 
 == переселились в санкт-петербург
