rename the readmes to profile-readmes

--- a/docs/en/profile-readme.adoc
+++ b/docs/en/profile-readme.adoc
@@ -1,8 +1,9 @@
 // adresses shorts
-:wiki: https://w.wiki/
+:h: https://
+:wiki: {h}w.wiki/
 
 
-*на русском → link:docs/ru/readme.adoc[`./docs/ru/readme.adoc`]*
+*на русском → link:../ru/profile-readme.adoc[`./docs/ru/profile-readme.adoc`]*
 
 
 |===
