revert and stylish the links, as the fixing doesnt work with github currently

--- a/docs/en/profile-readme.adoc
+++ b/docs/en/profile-readme.adoc
@@ -3,8 +3,7 @@
 :wiki: {h}w.wiki/
 
 
-*на русском → link:../ru/profile-readme.adoc[`./docs/ru/profile-readme.adoc`]*
-
+*на русском → link:../ru/profile-readme.adoc[`/docs/ru/profile-readme.adoc`]*
 
 |===
 
