replace full references to the schools with attributes

--- a/docs/ru/autobio.adoc
+++ b/docs/ru/autobio.adoc
@@ -7,6 +7,9 @@
 :w: {h}ru.qrwp.org/
 // ----
 
+:sch36: {h}s36mur.gosuslugi.ru[сош № 36]
+:sch519: {h}school519.spb.ru[сош № 519]
+
 :table-caption!: 
 
 
@@ -36,14 +39,14 @@
 | 
 они развелись.
 жил в основном с мамой, у папы часто гостил.
-| часто прогуливал мадоу `ru-mur` {h}detsad32.murm.prosadiki.ru[№ 32] зимой и {h}sadik45.com.ru[№ 45] летом.
+| прогуливал мадоу {h}detsad32.murm.prosadiki.ru[№ 32] зимой и {h}sadik45.com.ru[№ 45] летом.
 |
 
 
 | 8
 | 
 | 
-пошёл в 1 класс {h}gim7.murm.eduru.ru[мбоу `ru-mur` «сош № 17»].
+пошёл в 1 класс {h}gim7.murm.eduru.ru[сош № 17].
 отчислились из за криков классной руководительницы на детей.
 |
 
@@ -52,14 +55,14 @@
 | 
 `15-12-04` мать обвенчалась c {v}69725108[горенюком александром], 
 я обрёл _молочного брата_ — артёма
-| 2а {h}s36mur.gosuslugi.ru[мбоу `ru-mur` «сош № 36»].
+| 2а {sch36}.
 |
 
 
 | 12
 | 
 | 
-6а {h}s36mur.gosuslugi.ru[мбоу `ru-mur` «сош № 36»].
+6а {sch36}.
 в связи с {w}страх_сцены[социофобией] из негативного опыта до 2-го класса, 
 в окружении соревновательных одноклассников,
 и не содействию учителей —
@@ -72,7 +75,7 @@
 | 13
 | переехали в `ru-spe`, к ст. м. звёздной
 |
-7а {h}school519.spb.ru[гбоу `ru-spe` «сош № 519»].
+7а {sch519}.
 
 прежних одноклассников обосрал в `viber`.
 |
@@ -94,7 +97,7 @@
 
 | 14
 | прилетел в `ru-mur` на лето к бабушкам и дедушкам
-| 8а {h}school519.spb.ru[гбоу `ru-spe` «сош № 519»].
+| 8а {sch519}.
 |
 `21-06--` для {w}ложбан[ложбана] {h}mw-live.lojban.org/index.php?title=Эталонная_Грамматика_Ложбана&oldid=124459[форматировал] «эталонную грамматику», 
 и {h}discord.com/channels/230498134843850762/230498134843850762/857681719896047636[нарисовал] в {w}inkscape[`inkscape`] аватар их официального `discord` сервера.
@@ -105,7 +108,7 @@
 
 | 15
 | 
-| 9а {h}school519.spb.ru[гбоу `ru-spe` «сош № 519»].
+| 9а {sch519}.
 | 
 `22-03--` {h}drive.google.com/file/d/1KQ39MeP5m0otGypt1YLjnwLSWVazX3Lb/view?usp=drive_link[попробовал] создать юридическую энциклопедию на базе {w}wikimedia[`wikimedia`] со скином {h}mediawiki.org/wiki/Skin:Citizen[`citizen`].
 
@@ -116,7 +119,7 @@
 | 16
 | 
 | 
-10а {h}school519.spb.ru[гбоу `ru-spe` «сош № 519»].
+10а {sch519}.
 
 бросил школу в середине учебного года,
 месяц уговаривая маму.
