--- a/docs/en/my_autobio.adoc
+++ b/docs/en/my_autobio.adoc
@@ -101,7 +101,7 @@ and been promoting it in `discord`,
 
 
 | 14
-| прилетел в `ru-mur` на лето к бабушкам и дедушкам
+| flew to `ru-mur` to visit my grands for the summer
 | 8а {sch519}.
 |
 `21-06--` для {w}ложбан[ложбана] {h}mw-live.lojban.org/index.php?title=Эталонная_Грамматика_Ложбана&oldid=124459[форматировал] «эталонную грамматику», 
@@ -126,8 +126,12 @@ and been promoting it in `discord`,
 | 
 10а {sch519}.
 
-бросил школу в середине учебного года,
-месяц уговаривая маму.
-| {h}telesco.pe/zbapub/222[устроился] пешим курьером в яндекс еду.
+left the school after speaking to mom for a month.
+| {h}telesco.pe/zbapub/222[hired] at yadnex eats to work as a food deliverer for 200~ ₽/hr
+
+| 17
+| `--08-12` ate 6.2g of dried amanita muscaria caps and got into a {h}reddit.com/r/AmanitaMuscaria/comments/18xvvaw/respect_amanita_time_loops_are_real_and_theyre/[time loop], while being haspitolized to resuscitation.
+|
+| a friend {h}t.me/zbapub/416[got me] into part-time jobs for 300+ ₽/hr
 
 |===
